--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,7 +2,7 @@
     max-width: 880px;
     margin: 0 auto;
     margin-top: 67px;
-    margin-bottom: 60px;
+    padding-bottom: 60px;
 }
 
 @media screen and (max-width: 767px) {
