--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,14 +1,20 @@
 .header {
-    margin: 0 auto;
-    max-width: 880px;
-    min-height: 74px;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
     padding-top: 45px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-}
-
-@media screen and (max-width: 767px) {
-    .header {
-        margin-top: 28px;
-        min-height: 55px;
-    }
-}
+    max-width: 882px;
+    height: 74px;
+    margin: auto;
+    border-bottom: solid 1px #545454;
+  }
+    
+  @media screen and (max-width: 420px) {
+  .header {
+    height: 56px;
+    margin: 0;
+    padding-top: 28px;
+    max-width: 320px;
+    margin: 45px 30px 0 30px;
+  }
+  }
