--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,7 +1,7 @@
 .profile {
     max-width: 880px;
     margin: 0 auto;
-    margin-top: 40px;
+    padding-top: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
