--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/__container/page__container.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__data/header__data.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/logo/logo.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__card/profile__card.css);
@@ -44,3 +47,14 @@
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/__close-button/_zoom/popup__close-button_zoom.css);
 @import url(./blocks/error/error.css);
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__input/login__input.css);
+@import url(./blocks/login/__submit/login__submit.css);
+@import url(./blocks/login/__link/login__link.css);
+
+
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__image-info/popup__image-info.css);
+@import url(./blocks/popup/__image-title/popup__image-title.css);
